ganti harga layanan

--- a/html/index.html
+++ b/html/index.html
@@ -211,9 +211,10 @@
             <p>Mulai dari</p>
             <p class="harga">Rp 300.000</p>
             <ul style="margin-left: -10px">
-              <li><p style="color: white">Free Revisi 3x</p></li>
-              <li><p style="color: white">Free Hosting</p></li>
-              <li><p style="color: white">Free Domain</p></li>
+              <li><p style="color: white">Unlimited Revisi</p></li>
+              <li><p style="color: white">Full Resource Code</p></li>
+              <li><p style="color: white">Responsive</p></li>
+              <li><p style="color: white">Tepat Waktu</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Portofolio%20"
@@ -226,9 +227,10 @@
             <p>Mulai dari</p>
             <p class="harga">Rp 500.000</p>
             <ul style="margin-left: -10px">
-              <li><p style="color: white">Free Revisi 3x</p></li>
-              <li><p style="color: white">Free Hosting</p></li>
-              <li><p style="color: white">Free Domain</p></li>
+              <li><p style="color: white">Unlimited Revisi</p></li>
+              <li><p style="color: white">Full Resource Code</p></li>
+              <li><p style="color: white">Responsive</p></li>
+              <li><p style="color: white">Tepat Waktu</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Perusahaan%20"
@@ -241,9 +243,10 @@
             <p>Mulai dari</p>
             <p class="harga">Rp 300.000</p>
             <ul style="margin-left: -10px">
-              <li><p style="color: white">Free Revisi 3x</p></li>
-              <li><p style="color: white">Free Hosting</p></li>
-              <li><p style="color: white">Free Domain</p></li>
+              <li><p style="color: white">Unlimited Revisi</p></li>
+              <li><p style="color: white">Full Resource Code</p></li>
+              <li><p style="color: white">Responsive</p></li>
+              <li><p style="color: white">Tepat Waktu</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Pernikahan%20"
@@ -256,9 +259,10 @@
             <p>Mulai dari</p>
             <p class="harga">Rp 500.000</p>
             <ul style="margin-left: -10px">
-              <li><p style="color: white">Free Revisi 3x</p></li>
-              <li><p style="color: white">Free Hosting</p></li>
-              <li><p style="color: white">Free Domain</p></li>
+              <li><p style="color: white">Unlimited Revisi</p></li>
+              <li><p style="color: white">Full Resource Code</p></li>
+              <li><p style="color: white">Responsive</p></li>
+              <li><p style="color: white">Tepat Waktu</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20CRUD%20"
@@ -273,9 +277,10 @@
             <p>Mulai dari</p>
             <p class="harga">Rp 300.000</p>
             <ul style="margin-left: -10px">
-              <li><p style="color: white">Free Revisi 3x</p></li>
-              <li><p style="color: white">Free Hosting</p></li>
-              <li><p style="color: white">Free Domain</p></li>
+              <li><p style="color: white">Unlimited Revisi</p></li>
+              <li><p style="color: white">Full Resource Code</p></li>
+              <li><p style="color: white">Responsive</p></li>
+              <li><p style="color: white">Tepat Waktu</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Tugas%20Kuliah"
@@ -288,9 +293,10 @@
             <p>Mulai dari</p>
             <p class="harga">Rp 700.000</p>
             <ul style="margin-left: -10px">
-              <li><p style="color: white">Free Revisi 3x</p></li>
-              <li><p style="color: white">Free Hosting</p></li>
-              <li><p style="color: white">Free Domain</p></li>
+              <li><p style="color: white">Unlimited Revisi</p></li>
+              <li><p style="color: white">Full Resource Code</p></li>
+              <li><p style="color: white">Responsive</p></li>
+              <li><p style="color: white">Tepat Waktu</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Manajemen%20"
@@ -380,11 +386,10 @@
             <li>
               <div class="card2">
                 <a href=""
-                  ><span class="model-name"
-                    >Apakah Ada Biaya Tahunan Tambahan?</span
+                  ><span class="model-name">Apakah Ada Biaya hosting?</span
                   ><span
-                    >Hosting dan domain pada tahun pertama gratis, untuk tahun
-                    berikutnya, Anda perlu membayar biaya perpanjangan</span
+                    >Ada tambahan biaya untuk hosting dan domain diluar harga
+                    paket</span
                   ></a
                 >
               </div>
