--- a/html/index.html
+++ b/html/index.html
@@ -213,8 +213,8 @@
             <ul style="margin-left: -10px">
               <li><p style="color: white">Unlimited Revisi</p></li>
               <li><p style="color: white">Full Resource Code</p></li>
-              <li><p style="color: white">Responsive</p></li>
-              <li><p style="color: white">Tepat Waktu</p></li>
+              <li><p style="color: white">Free Domain .site</p></li>
+              <li><p style="color: white">Free Hosting</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Portofolio%20"
@@ -229,8 +229,8 @@
             <ul style="margin-left: -10px">
               <li><p style="color: white">Unlimited Revisi</p></li>
               <li><p style="color: white">Full Resource Code</p></li>
-              <li><p style="color: white">Responsive</p></li>
-              <li><p style="color: white">Tepat Waktu</p></li>
+              <li><p style="color: white">Free Domain .site</p></li>
+              <li><p style="color: white">Free Hosting</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Perusahaan%20"
@@ -245,8 +245,8 @@
             <ul style="margin-left: -10px">
               <li><p style="color: white">Unlimited Revisi</p></li>
               <li><p style="color: white">Full Resource Code</p></li>
-              <li><p style="color: white">Responsive</p></li>
-              <li><p style="color: white">Tepat Waktu</p></li>
+              <li><p style="color: white">Free Domain .site</p></li>
+              <li><p style="color: white">Free Hosting</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Pernikahan%20"
@@ -261,8 +261,8 @@
             <ul style="margin-left: -10px">
               <li><p style="color: white">Unlimited Revisi</p></li>
               <li><p style="color: white">Full Resource Code</p></li>
-              <li><p style="color: white">Responsive</p></li>
-              <li><p style="color: white">Tepat Waktu</p></li>
+              <li><p style="color: white">Free Domain .site</p></li>
+              <li><p style="color: white">Free Hosting</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20CRUD%20"
@@ -279,8 +279,8 @@
             <ul style="margin-left: -10px">
               <li><p style="color: white">Unlimited Revisi</p></li>
               <li><p style="color: white">Full Resource Code</p></li>
-              <li><p style="color: white">Responsive</p></li>
-              <li><p style="color: white">Tepat Waktu</p></li>
+              <li><p style="color: white">Free Domain .site</p></li>
+              <li><p style="color: white">Free Hosting</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Tugas%20Kuliah"
@@ -295,8 +295,8 @@
             <ul style="margin-left: -10px">
               <li><p style="color: white">Unlimited Revisi</p></li>
               <li><p style="color: white">Full Resource Code</p></li>
-              <li><p style="color: white">Responsive</p></li>
-              <li><p style="color: white">Tepat Waktu</p></li>
+              <li><p style="color: white">Free Domain .site</p></li>
+              <li><p style="color: white">Free Hosting</p></li>
             </ul>
             <a
               href="https://api.whatsapp.com/send?phone=6281232381218&text=Halo%20Admin%20Saya%20Mau%20Order%20Jasa%20Pembuatan%20Website%20Manajemen%20"
@@ -388,8 +388,8 @@
                 <a href=""
                   ><span class="model-name">Apakah Ada Biaya hosting?</span
                   ><span
-                    >Ada tambahan biaya untuk hosting dan domain diluar harga
-                    paket</span
+                    >Gratis domain 1 tahun dan hosting 1 bulan, untuk
+                    perpanjangannya ada biaya lagi</span
                   ></a
                 >
               </div>
